--- a/package.json
+++ b/package.json
@@ -13,18 +13,19 @@
     "build:android": "eas build --profile development --platform android"
   },
   "dependencies": {
-    "@livekit/react-native": "^2.9.6",
-    "@livekit/react-native-webrtc": "^137.0.2",
+    "@expo/vector-icons": "^15.0.3",
     "expo": "^54.0.0",
+    "expo-asset": "^12.0.12",
     "expo-av": "~16.0.8",
-    "expo-build-properties": "~1.0.10",
-    "expo-dev-client": "~6.0.20",
+    "expo-constants": "^18.0.12",
     "expo-file-system": "~19.0.21",
+    "expo-font": "^14.0.10",
     "expo-linear-gradient": "~15.0.8",
     "expo-speech": "~14.0.8",
     "expo-status-bar": "~3.0.9",
-    "react": "^19.1.0",
-    "react-native": "^0.81.5"
+    "react": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "~5.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
