--- a/package.json
+++ b/package.json
@@ -4,28 +4,27 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
-    "start:dev": "expo start --dev-client",
-    "android:dev": "expo start --android --dev-client",
-    "build:dev": "eas build --profile development --platform all",
-    "build:android": "eas build --profile development --platform android"
+    "token-server": "python token_server.py",
+    "agent": "python livekit_agent.py dev"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.3",
-    "expo": "^54.0.0",
-    "expo-asset": "^12.0.12",
-    "expo-av": "~16.0.8",
-    "expo-constants": "^18.0.12",
-    "expo-file-system": "~19.0.21",
-    "expo-font": "^14.0.10",
-    "expo-linear-gradient": "~15.0.8",
-    "expo-speech": "~14.0.8",
-    "expo-status-bar": "~3.0.9",
-    "react": "19.1.0",
-    "react-native": "0.81.5",
-    "react-native-safe-area-context": "~5.6.0"
+    "@expo/vector-icons": "^14.0.0",
+    "@livekit/react-native": "^1.3.0",
+    "@livekit/react-native-webrtc": "^104.0.1",
+    "expo": "~50.0.0",
+    "expo-av": "~13.10.0",
+    "expo-constants": "~15.4.0",
+    "expo-file-system": "~16.0.0",
+    "expo-font": "~11.10.0",
+    "expo-linear-gradient": "~12.7.0",
+    "expo-status-bar": "~1.11.0",
+    "react": "18.2.0",
+    "react-native": "0.73.6",
+    "react-native-safe-area-context": "4.8.2",
+    "text-encoding-polyfill": "^0.6.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
